# lac

./: compile_commands.json  frames_2025-05-12_09.38.42.gv  frames_2025-05-20_20.25.57.gv  frames_2025-05-22_11.48.33.gv  frames_2025-05-22_15.39.23.gv  frames_2025-05-23_16.16.39.gv  frames_2025-05-23_17.15.58.gv  frames_2025-05-23_17.55.44.gv  frames_2025-05-25_15.47.03.gv  frames_2025-05-25_17.36.53.gv  frames_2025-05-25_17.47.03.gv  frames_2025-05-26_09.08.51.gv  frames_2025-05-26_14.20.27.gv  frames_2025-05-26_14.49.22.gv  frames_2025-05-26_17.00.02.gv  frames_2025-05-26_17.23.30.gv  frames_2025-05-26_17.41.44.gv  frames_2025-05-26_20.34.43.gv  frames_2025-05-26_20.46.33.gv  frames_2025-05-26_21.01.55.gv  frames_2025-05-27_16.18.58.gv  frames_2025-05-29_16.26.28.gv  frames_2025-05-29_17.44.35.gv  frames_2025-05-29_19.56.14.gv  frames_2025-05-31_12.36.21.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/air_cleaning_pkg/lib/air_cleaning_pkg/: pm_sensor_publisher_node
install/air_cleaning_pkg/share/air_cleaning_pkg/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
src/air_cleaning_pkg/: package.xml
src/air_cleaning_pkg/air_cleaning_pkg/: pm_sensor_subscriber_node.py
src/arduino_inos/Motor_Stop_Working_May15/Motor_Stop_Working_May15/: Motor_Stop_Working_May15.ino
src/arduino_inos/Ultrasonic_Working_may14/: Ultrasonic_Working_may14.ino
src/arduino_inos/Ultrasonic_cliff/: Ultrasonic_cliff.ino
src/cliff_safety/: CMakeLists.txt  package.xml
src/cliff_safety/src/: cliff_safety_node.cpp
src/diffbot_hardware/: CMakeLists.txt  package.xml  plugin_description.xml
src/diffbot_hardware/include/diffbot_hardware/: DiffBotSystem.hpp
src/diffbot_hardware/src/: DiffBotSystem.cpp
src/diffbot_hardware/test/: test_load_diffbot_hardware.cpp
src/motor_driver/: package.xml  setup.py
src/piduino02/arduinoinos/encoder_calibrate01/: encoder_calibrate01.ino
src/piduino02/arduinoinos/pinsy/: pinsy01.ino
src/piduino02/arduinoinos/pinsy/pinsy02/: pinsy02.ino
src/piduino02/arduinoinos/pinsy/pinsy03/: pinsy03.ino
src/piduino02/arduinoinos/pinsy/pinsy04/: pinsy04.ino
src/piduino02/arduinoinos/pinsy/pinsy05/: pinsy05.ino
src/piduino02/piduino02/: serial_publisher.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/config/: mapper_params_online_async.yaml  mapper_params_online_sync.yaml  nav2_params.yaml  robot_controllers.yaml  rvisconfig.rviz  test_rvisconfig.rviz
src/robot_bringup/launch/: control_launch.py
src/robot_description/: CMakeLists.txt
src/robot_description/urdf/: robot.urdf.xacro
src/safety/: setup.py
src/serial/: package.xml
src/slam/: package.xml  setup.py
src/slam/config/: mapper_params_online_async.yaml
src/teleop_twist_joy/config/: ps4.config.yaml  ps4_config.yaml
src/teleop_twist_joy/launch/: teleop-launch.py
src/twist_mux/config/: twist_mux_topics.yaml
src/ultrasonic_safety/: CMakeLists.txt  package.xml
src/ultrasonic_safety/src/: ultrasonic_safety_node.cpp
src/urdf_description/: package.xml  setup.cfg  setup.py
src/urdf_description/urdf/: lac_robot.xacro  lac_robot.xarco.save
src_052325_01/src/diffbot_hardware/: CMakeLists.txt  package.xml
src_052325_01/src/diffbot_hardware/src/: DiffBotSystem.cpp
src_052325_01/src/piduino02/arduinoinos/pinsy/pinsy02/: pinsy02.ino
src_052325_01/src/piduino02/arduinoinos/pinsy/pinsy03/: pinsy03.ino
src_052325_01/src/piduino02/piduino02/: motor_driver.py
src_052325_01/src/robot_bringup/launch/: control_launch.py
src_052325_01/src/robot_description/: package.xml
src_052325_01/src/robot_description/urdf/: robot.urdf.xacro
src_052325_01/src/ros2_controllers/diff_drive_controller/src/: diff_drive_controller.cpp  diff_drive_controller_parameter.yaml
src_052325_01/src/serial/: CMakeLists.txt
src_052325_01/src/teleop_twist_joy/config/: ps4.config.yaml
src_052725b/src/arduino_inos/motor_switch_direction_may20/: motor_switch_direction_may20.ino
src_052725b/src/diffbot_hardware/: plugin_description.xml
src_052725b/src/piduino02/arduinoinos/Archives/piduino_test_01/: piduino_test_01.ino
src_052725b/src/piduino02/piduino02/: controller.py
src_052725b/src/robot_bringup/config/: rvisconfig.rviz
src_052725b/src/robot_bringup/launch/: chatsfav_control_launch.py  control_launch.py
src_052725b/src/ros2_controllers/diff_drive_controller/src/: diff_drive_controller.cpp  diff_drive_controller_parameter.yaml
src_052725b/src/safety/: package.xml
src_052725b/src/sllidar_ros2/launch/: sllidar_a1_launch.py
src_052725b/src/sllidar_ros2/src/: sllidar_node.cpp
src_052725b/src/teleop_twist_joy/src/: teleop_twist_joy.cpp
src_052725b/src/twist_mux/config/: twist_mux_topics.yaml
src_052725b/src/ultrasonic_safety/: CMakeLists.txt  package.xml
