<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cliff_safety</name>
  <version>0.0.0</version>
  <description>Ultrasonic Fall Prevention</description>
  <maintainer email="augustruizbueche@gmail.com">lac</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>ament_lint_auto</exec_depend>
  <exec_depend>ament_lint_common</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launc_testing_ament_cmake</exec_depend>
  <exec_depend>launc_testing_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
