<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>LAC Robot Bringup Package</description>
  <maintainer email="amhun@pdx.edu">lac</maintainer>
  <license>TODO: License declaration</license>

  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>teleop_twist_joy</depend>
  <depend>joy</depend>
  <depend>robot_state_publisher</depend>
  <depend>twist_mux</depend>
  <depend>ultrasonic_safety</depend>
  <depend>tf2_ros</depend>
  <depend>rviz2</depend>
  <depend>sllidar_ros2</depend>
  <depend>slam_toolbox</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
