<?xml version="1.0"?>
<package format="3">
  <name>serial</name>
  <version>1.0.0</version>
  <description>Serial interface library for ROS2</description>
  <maintainer email="augustruizbueche@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Export include dir -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


